Last refinements: 	Fixed order and figures references between SM and main text 	Fixed figure representations 	Added explanation how the division types are classified in model 	Added link to dissertation

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -1,59 +1,5 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
-@article{Vermeer:2014fl,
-author = {Vermeer, Joop E M and von Wangenheim, Daniel and Barberon, Marie and Lee, Yuree and Stelzer, Ernst H K and Maizel, Alexis and Geldner, Niko},
-title = {{A spatial accommodation by neighboring cells is required for organ initiation in Arabidopsis.}},
-journal = {Science (New York, N.Y.)},
-year = {2014},
-volume = {343},
-number = {6167},
-pages = {178--183},
-month = jan
-}
-
-@article{Geldner:2009bc,
-author = {Geldner, Niko and D{\'e}nervaud-Tendon, Val{\'e}rie and Hyman, Derek L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
-title = {{Rapid, combinatorial analysis of membrane compartments in intact plants with a multicolor marker set.}},
-journal = {The Plant Journal},
-year = {2009},
-volume = {59},
-number = {1},
-pages = {169--178},
-month = jul
-}
-
-@article{Grefen:2010ho,
-author = {Grefen, Christopher and Donald, Naomi and Schumacher, Karin and Blatt, Michael R},
-title = {{A Ubiquitin-10 promoter-based vector set for fluorescent protein tagging facilitates temporal stability and native protein distribution in transient and stable expression studies.}},
-journal = {The Plant Journal},
-year = {2010},
-volume = {64},
-number = {2},
-pages = {355--365},
-month = jul
-}
-
-@article{DeRybel:2010ic,
-author = {De Rybel, Bert and Vassileva, Valya and Parizot, Boris and Demeulenaere, Marlies and Grunewald, Wim and Audenaert, Dominique and Van Campenhout, Jelle and Overvoorde, Paul and Jansen, Leentje and Vanneste, Steffen and M{\"o}ller, Barbara and Wilson, Michael and Holman, Tara and Van Isterdael, Gert and Brunoud, G{\'e}raldine and Vuylsteke, Marnik and Vernoux, Teva and De Veylder, Lieven and Inz{\'e}, Dirk and Weijers, Dolf and Bennett, Malcolm J and Beeckman, Tom},
-title = {{A novel aux/IAA28 signaling cascade activates GATA23-dependent specification of lateral root founder cell identity.}},
-journal = {Current Biology},
-year = {2010},
-volume = {20},
-number = {19},
-pages = {1697--1706},
-month = oct
-}
-
-@article{Lucas11032013,
-author = {Lucas, Mika{\"e}l and Kenobi, Kim and von Wangenheim, Daniel and VO$\beta$, Ute and Swarup, Kamal and De Smet, Ive and Van Damme, Dani{\"e}l and Lawrence, Tara and P{\'e}ret, Benjamin and Moscardi, Eric and Barbeau, Daniel and Godin, Christophe and Salt, David and Guyomarc'h, Soazig and Stelzer, Ernst H K and Maizel, Alexis and Laplaze, Laurent and Bennett, Malcolm J},
-title = {{Lateral root morphogenesis is dependent on the mechanical properties of the overlaying tissues.}},
-journal = {Proc Natl Acad Sci U S A},
-year = {2013},
-volume = {110},
-number = {13},
-pages = {5229--5234},
-month = mar
-}
 
 @ARTICLE{assfalg_et_al_2008,
   author = {A{\ss}falg, Johannes and Kriegel, Hans P. and Kr{\"{o}}ger, Peer
@@ -847,6 +793,24 @@ month = mar
   timestamp = {2014.06.26}
 }
 
+@ARTICLE{DeRybel:2010ic,
+  author = {De Rybel, Bert and Vassileva, Valya and Parizot, Boris and Demeulenaere,
+	Marlies and Grunewald, Wim and Audenaert, Dominique and Van Campenhout,
+	Jelle and Overvoorde, Paul and Jansen, Leentje and Vanneste, Steffen
+	and M{\"o}ller, Barbara and Wilson, Michael and Holman, Tara and
+	Van Isterdael, Gert and Brunoud, G{\'e}raldine and Vuylsteke, Marnik
+	and Vernoux, Teva and De Veylder, Lieven and Inz{\'e}, Dirk and Weijers,
+	Dolf and Bennett, Malcolm J and Beeckman, Tom},
+  title = {{A novel aux/IAA28 signaling cascade activates GATA23-dependent specification
+	of lateral root founder cell identity.}},
+  journal = {Current Biology},
+  year = {2010},
+  volume = {20},
+  pages = {1697--1706},
+  number = {19},
+  month = oct
+}
+
 @INPROCEEDINGS{ding_et_al_2008,
   author = {Ding, Hui and Trajcevski, Goce and Scheuermann, Peter},
   title = {Efficient Similarity Join of Large Sets of Moving Object Trajectories},
@@ -1096,6 +1060,7 @@ month = mar
   title = {Interactive Similarity Analysis for 3D+t Cell Trajectory Data},
   school = {Heidelberg University},
   year = {2015},
+  address = {\href{http://archiv.ub.uni-heidelberg.de/volltextserver/18095/}{\textcolor{blue}{[LINK]}}},
   owner = {necrolyte},
   timestamp = {2015.02.02}
 }
@@ -1249,6 +1214,19 @@ month = mar
   timestamp = {2014.07.16}
 }
 
+@ARTICLE{Geldner:2009bc,
+  author = {Geldner, Niko and D{\'e}nervaud-Tendon, Val{\'e}rie and Hyman, Derek
+	L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
+  title = {{Rapid, combinatorial analysis of membrane compartments in intact
+	plants with a multicolor marker set.}},
+  journal = {The Plant Journal},
+  year = {2009},
+  volume = {59},
+  pages = {169--178},
+  number = {1},
+  month = jul
+}
+
 @INPROCEEDINGS{giannotti_et_al_2007,
   author = {Giannotti, Fosca and Nanni, Mirco and Pinelli, Fabio and Pedreschi,
 	Dino},
@@ -1333,6 +1311,20 @@ month = mar
   pages = {50--61},
   owner = {necrolyte},
   timestamp = {2014.06.18}
+}
+
+@ARTICLE{Grefen:2010ho,
+  author = {Grefen, Christopher and Donald, Naomi and Schumacher, Karin and Blatt,
+	Michael R},
+  title = {{A Ubiquitin-10 promoter-based vector set for fluorescent protein
+	tagging facilitates temporal stability and native protein distribution
+	in transient and stable expression studies.}},
+  journal = {The Plant Journal},
+  year = {2010},
+  volume = {64},
+  pages = {355--365},
+  number = {2},
+  month = jul
 }
 
 @MISC{HDF5,
@@ -2159,6 +2151,23 @@ month = mar
   pages = {1012--1018},
   owner = {necrolyte},
   timestamp = {2013.12.18}
+}
+
+@ARTICLE{Lucas11032013,
+  author = {Lucas, Mika{\"e}l and Kenobi, Kim and von Wangenheim, Daniel and
+	VO$\beta$, Ute and Swarup, Kamal and De Smet, Ive and Van Damme,
+	Dani{\"e}l and Lawrence, Tara and P{\'e}ret, Benjamin and Moscardi,
+	Eric and Barbeau, Daniel and Godin, Christophe and Salt, David and
+	Guyomarc'h, Soazig and Stelzer, Ernst H K and Maizel, Alexis and
+	Laplaze, Laurent and Bennett, Malcolm J},
+  title = {{Lateral root morphogenesis is dependent on the mechanical properties
+	of the overlaying tissues.}},
+  journal = {Proc Natl Acad Sci U S A},
+  year = {2013},
+  volume = {110},
+  pages = {5229--5234},
+  number = {13},
+  month = mar
 }
 
 @BOOK{LOD3D,
@@ -3200,6 +3209,20 @@ month = mar
   pages = {11:1--11:8},
   date-added = {2011-11-03 14:40:46 +0100},
   date-modified = {2014-06-19 19:45:25 +0000}
+}
+
+@ARTICLE{Vermeer:2014fl,
+  author = {Vermeer, Joop E M and von Wangenheim, Daniel and Barberon, Marie
+	and Lee, Yuree and Stelzer, Ernst H K and Maizel, Alexis and Geldner,
+	Niko},
+  title = {{A spatial accommodation by neighboring cells is required for organ
+	initiation in Arabidopsis.}},
+  journal = {Science (New York, N.Y.)},
+  year = {2014},
+  volume = {343},
+  pages = {178--183},
+  number = {6167},
+  month = jan
 }
 
 @ARTICLE{Vesanto_1999,
