--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1013,28 +1013,53 @@ Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift 
 %
 \begin{table}\centering
 \begin{tabular}{@{}lccccc@{}}\toprule
-& Area ratio & Average \#Cells & Average \#AD & Average \#PD & Average \#RD\\ \midrule
+& Area ratio & Average \#Cells & Average \#AD & Average \#PD\\ \midrule
 \textbf{Model data}\\
-Geometric & 0.320 & 59.8 & 19.6 & 38.1 & -\\
-Random & 0.308 & 65.9 & 30.6 & 33.2 & -\\
-1\textsuperscript{st} random then geometric & 0.320 & 63.4 & 22.7 & 38.7 & -\\
-Basal growth & 0.420 & 64.9 & 18.1 & 44.7 & -\\
-1\textsuperscript{st} asymmetric then geometric & 0.420 & 66.6 & 18.3 & 46.3 & -\\
-Random with equal areas & 0.308 & 66.4 & 34.0 & 30.3 & -\\
+Geometric & 0.320 & 59.8 & 19.6 & 38.1\\
+Random & 0.308 & 65.9 & 30.6 & 33.2\\
+1\textsuperscript{st} random then geometric & 0.320 & 63.4 & 22.7 & 38.7\\
+Basal growth & 0.420 & 64.9 & 18.1 & 44.7\\
+1\textsuperscript{st} asymmetric then geometric & 0.420 & 66.6 & 18.3 & 46.3\\
+Random with equal areas & 0.308 & 66.4 & 34.0 & 30.3\\
 \textbf{Real data}\\
-\#120830 & - & 64 & 31 & 23 & 8\\
-\#121204 & - & 49 & 17 & 24 & 6\\
-\#121211 & - & 81 & 25 & 36 & 15\\
-\#130508 & - & 46 & 18 & 19 & 7\\
-\#130607 & - & 82 & 26 & 40 & 13\\
-Average (wild types) & - & 64.4 & 23.4 & 28.4 & 9.8\\
-Aurora mutant & - & 129 & 56 & 50 & 21\\
+\#120830 & - & 64 & 31 & 23\\
+\#121204 & - & 49 & 17 & 24\\
+\#121211 & - & 81 & 25 & 36\\
+\#130508 & - & 46 & 18 & 19\\
+\#130607 & - & 82 & 26 & 40\\
+Average (wild types) & - & 64.4 & 23.4 & 28.4\\
+Aurora mutant & - & 129 & 56 & 50\\
 \bottomrule
 \end{tabular}
-	\caption[Parameters for model results.]{\textbf{Parameters for model results.} The table lists the area ratio values and the average number of cells, anticlinal (AD), periclinal (PD) and radial (RD) divisions for each of the six model scenarios (see Section~\ref{sec:modelScenarios}) performing 100 simulations. At the bottom, the exact numbers of cells and divisions occurring in the master cell files only are given for each real dataset.
+	\caption[Parameters for model results.]{\textbf{Parameters for model results.} The table lists the area ratio values and the average number of cells, anticlinal (AD) and periclinal (PD) divisions for each of the six model scenarios (see Section~\ref{sec:modelScenarios}) performing 100 simulations. At the bottom, the exact numbers of cells and divisions occurring in the master cell files only are given for each real dataset.
 	}
 	\label{tab:modelParameters}
 \end{table}
+
+% \begin{table}\centering
+% \begin{tabular}{@{}lccccc@{}}\toprule
+% & Area ratio & Average \#Cells & Average \#AD & Average \#PD & Average \#RD\\ \midrule
+% \textbf{Model data}\\
+% Geometric & 0.320 & 59.8 & 19.6 & 38.1 & -\\
+% Random & 0.308 & 65.9 & 30.6 & 33.2 & -\\
+% 1\textsuperscript{st} random then geometric & 0.320 & 63.4 & 22.7 & 38.7 & -\\
+% Basal growth & 0.420 & 64.9 & 18.1 & 44.7 & -\\
+% 1\textsuperscript{st} asymmetric then geometric & 0.420 & 66.6 & 18.3 & 46.3 & -\\
+% Random with equal areas & 0.308 & 66.4 & 34.0 & 30.3 & -\\
+% \textbf{Real data}\\
+% \#120830 & - & 64 & 31 & 23 & 8\\
+% \#121204 & - & 49 & 17 & 24 & 6\\
+% \#121211 & - & 81 & 25 & 36 & 15\\
+% \#130508 & - & 46 & 18 & 19 & 7\\
+% \#130607 & - & 82 & 26 & 40 & 13\\
+% Average (wild types) & - & 64.4 & 23.4 & 28.4 & 9.8\\
+% Aurora mutant & - & 129 & 56 & 50 & 21\\
+% \bottomrule
+% \end{tabular}
+% 	\caption[Parameters for model results.]{\textbf{Parameters for model results.} The table lists the area ratio values and the average number of cells, anticlinal (AD), periclinal (PD) and radial (RD) divisions for each of the six model scenarios (see Section~\ref{sec:modelScenarios}) performing 100 simulations. At the bottom, the exact numbers of cells and divisions occurring in the master cell files only are given for each real dataset.
+% 	}
+% 	\label{tab:modelParameters}
+% \end{table}
 
 %\begin{table}\centering
 %\begin{tabular}{@{}lcccccc@{}}\toprule
